Clarify the status quo for `@HD`: it's optional, and the first line
Clarify the current rules: having an `@HD` line in your SAM headers
is optional, but when present it must come first. (See #482.)
Describe it less generically than "the header line".

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -242,7 +242,7 @@ meanings can be avoided.}
   \endfirsthead
   \cline{1-3}
   \endhead
-  \multicolumn{2}{|l}{\tt @HD} & The header line. The first line if present. \\\cline{2-3}
+  \multicolumn{2}{|l}{\tt @HD} & File-level metadata. Optional. If present, there must be only one {\tt @HD} line and it must be the first line of the file. \\\cline{2-3}
   & {\tt VN}* & Format version. \emph{Accepted format}: {\tt /\char94[0-9]+\char92.[0-9]+\$/}.\\\cline{2-3}
   & {\tt SO} & Sorting order of alignments. \emph{Valid values}: {\tt unknown} (default), {\tt
     unsorted}, {\tt queryname} and {\tt coordinate}. For coordinate sort, the major sort
