Minor table layout change

--- a/CRAMv4.tex
+++ b/CRAMv4.tex
@@ -1127,7 +1127,7 @@ The following flags are duplicated from the SAM and BAM specification, with iden
 Note however some of these flags can be derived during decode, so may be omitted in the CRAM file and the bits computed based on both reads of a pair-end library residing within the same slice.
 
 \begin{threeparttable}[t]
-\begin{tabular}{|>{\raggedright}p{144pt}|>{\raggedright}p{144pt}|>{\raggedright}p{144pt}|}
+\begin{tabular}{|l|l|l|}
 \hline
 \textbf{Bit flag} & \textbf{Comment} & \textbf{Description}\tabularnewline
 \hline
